Add a note for SUO

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -181,6 +181,9 @@
 
 \reciperef{87}。“擀”，《四》本作“扞”，《八》本作“撖”。径改。
 
+\recipelist{93,123,137,192,251,292}，“趖”。《四》本《八》本作“梭”。径改。“趖”，
+{su\={o}}\,{ㄙ\kern-.333333emㄨ\kern-.333333emㄛ}［方言］移动。
+
 \reciperef{94}。“㮟”，《八》本作“扞”。误。“㮟”，{k\={a}}{ㄎ\kern-.25emㄚ}
 （紧）夹，扎，刺。
 
