--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -188,7 +188,7 @@
 作“气”。误。
 
 \reciperef{100}。“叫花鸡”，《四》本《八》本作“叫化鸡”，径改。“𫃕”，{c\'{i}}%
-{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}粘稠。
+{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}\,粘稠。
 
 \reciperef{101}。“鸡翘”，鸡屁股。
 
