--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -184,7 +184,7 @@
 \recipelist{93,123,137,192,251,292}，“趖”。《四》本《八》本作“梭”。径改。“趖”，
 {su\={o}}\,{ㄙ\kern-.333333emㄨ\kern-.333333emㄛ}［方言］移动。
 
-\reciperef{94}。“㮟”，《八》本作“扞”。误。“㮟”，{k\={a}}{ㄎ\kern-.25emㄚ}
+\reciperef{94}。“㮟”，《八》本作“扞”。误。“㮟”，{k\={a}}\,{ㄎ\kern-.25emㄚ}
 （紧）夹，扎，刺。
 
 \reciperef{95}。《八》本标题作“刷把鸡丝（汤）”。“上笼汽三分钟”。“汽”，《八》本
