--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -190,8 +190,8 @@
 \reciperef{95}。《八》本标题作“刷把鸡丝（汤）”。“上笼汽三分钟”。“汽”，《八》本
 作“气”。误。
 
-\reciperef{100}。“叫花鸡”，《四》本《八》本作“叫化鸡”，径改。“𫃕”，{c\'{i}}%
-{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}\,粘稠。
+\reciperef{100}。“叫花鸡”，《四》本《八》本作“叫化鸡”，径改。“𫃕”，%
+{c\'{i}}\,{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}\,粘稠。
 
 \reciperef{101}。“鸡翘”，鸡屁股。
 
