Set \parskip for collation notes section

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -30,6 +30,7 @@
 \begingroup%
 \vbadness=10000%
 \small%
+\setlength{\parskip}{0\baselineskip plus .05\baselineskip}%
 \begin{center}%
 {%
 	\Large\rmfamily\bfseries%
