--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -103,10 +103,9 @@
 \recipelist{24,48,55,75,76,84,92,107,111}等多篇，“口蘑”。《四》本《八》本作
 “口茉”。据《中》本《重》本改。
 
-\recipelist{26,93,96,110,111,219,244}，“三叠水”。“三叠水形”，冷菜菜肴一种传统
-装盘形式。用熟料改成长方片或条，先用碎料垫底，然后按顺序摆边上的两行，最后在两
-行中间覆盖一行，两边低、中间高，故称“三叠水”。要求刀工处理时厚薄均匀，长短一
-致，并按刀口等距离排列整齐人盘，主要看刀面。
+\recipelist{26,93,96,110,111,219,244}，“三叠水”。冷菜菜肴的一种传统装盘形式。
+把原料切成薄厚均匀、长短一致的长方片或条。先用碎料垫底，然后按顺序摆成刀口等距
+的两行，最后在两行中间覆盖一行整齐装盘。因装盘成形为三叠，如叠泉，故名。
 
 \recipelist{26,95,207,262}，“风车”。“风车形”，用荤素原料改成厚薄一致的长方片，
 将色泽和荤素岔开，按刀面等距离整齐地装入圆盘，装盘时原料要外宽内窄，前片搭后片
