Add note for HUANHOU

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -153,6 +153,8 @@
 \lower.215em\hbox{\scalebox{.95}[.55]{⺀}}\kern-.405616em%
 \scalebox{.65}[1]{刂}}”，系已弃用之类推简化字。
 
+\recipelist{52,261}，“环喉”。猪或牛的主动脉血管。
+
 \reciperef{55}。《八》本目录中作“罐子肉”。误。《中》本目录中作“坛子肉”，内页
 中作“罎子肉”。
 
