Fix commas and periods

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -61,23 +61,23 @@
 
 \null%
 
-\recipelist{2,7,8,9,20,22,24,28,29,31,36,37,38}等多篇，“滗”。《四》本《八》本
+\recipelist{2,7,8,9,20,22,24,28,29,31,36,37,38}等多篇。“滗”，《四》本《八》本
 作“泌”。径改。“滗”，滤。
 
-\recipelist{4,24,71,79,92,94,100,109,112}等多篇，“搛”。《四》本《八》本作
+\recipelist{4,24,71,79,92,94,100,109,112}等多篇。“搛”，《四》本《八》本作
 “扦”。径改。“搛”，（用筷子）夹。
 
 \reciperef{6}。“锅巴”，《四》本《八》本作“锅粑”。据《中》本改。
 
 \reciperef{7}。《四》本《八》本无脚注{\footnotesize\circled{1}}。据《中》本补。
 
-\recipelist{8,11,16,17,35,54,73,78,109}等多篇，“醪糟”，各本皆作“𰪿糟”。径改。
+\recipelist{8,11,16,17,35,54,73,78,109}等多篇。“醪糟”，各本皆作“𰪿糟”。径改。
 “𰪿”系“𫃑”之类推简化字。
 
 \reciperef{9}。“使全部蘸裹在肉片上”。“蘸”，《四》本《八》本作“醮”。据《中》本
 改。
 
-\recipelist{15,26,35,73,95,96,106,111,113,191,217,225,264}，“鱼碗”。一种盛菜或
+\recipelist{15,26,35,73,95,96,106,111,113,191,217,225,264}。“鱼碗”，一种盛菜或
 装汤的大碗。在四川一带此叫法居多，其尺寸比斗碗大，约为7至11寸，碗深度比斗碗稍
 浅。也叫小鱼钵。“斗碗”，也是指大碗。旧时民间指较大的土碗。
 
@@ -85,51 +85,51 @@
 
 \reciperef{17}。“瓤”，各本皆作“穰”。径改。
 
-\recipelist{18,19}，“尖刀圆子”。《四》本《八》本《七》本作“尖刀元子”。《中》本
+\recipelist{18,19}。“尖刀圆子”，《四》本《八》本《七》本作“尖刀元子”。《中》本
 作“尖刀丸子”。径改。
 
-\recipelist{18,279}，“汆”。《四》本《八》本作“川”。径改。
+\recipelist{18,279}。“汆”，《四》本《八》本作“川”。径改。
 
 \recipelist{19,20,56,195,254}所附共十一副插图。《四》本《八》本插图，线条边缘
 参差不齐模糊不清。据《中》本插图重制。
 
-\recipelist{19,22,56,99,155,189,208,244}，“像”。\null《四》本《八》本作“象”。
+\recipelist{19,22,56,99,155,189,208,244}。“像”，\null《四》本《八》本作“象”。
 径改。
 
-\recipelist{21,84,175,227,248}，“棋子块”。《四》本《八》本作“旗子块”。径改。
+\recipelist{21,84,175,227,248}。“棋子块”，《四》本《八》本作“旗子块”。径改。
 
-\recipelist{22,33}，“肉圆”。《四》本《八》本作“肉元”。径改。
+\recipelist{22,33}。“肉圆”，《四》本《八》本作“肉元”。径改。
 
-\recipelist{24,48,55,75,76,84,92,107,111}等多篇，“口蘑”。《四》本《八》本作
+\recipelist{24,48,55,75,76,84,92,107,111}等多篇。“口蘑”，《四》本《八》本作
 “口茉”。据《中》本《重》本改。
 
-\recipelist{26,93,96,110,111,219,244}，“三叠水”。冷菜菜肴的一种传统装盘形式。
+\recipelist{26,93,96,110,111,219,244}。“三叠水”，冷菜菜肴的一种传统装盘形式。
 把原料切成薄厚均匀、长短一致的长方片或条。先用碎料垫底，然后按顺序摆成刀口等距
 的两行，最后在两行中间覆盖一行整齐装盘。因装盘成形为三叠，如叠泉，故名。
 
-\recipelist{26,95,207,262}，“风车”（风车形）。把不同原料切成厚薄均匀、长短一致
+\recipelist{26,95,207,262}。“风车”（风车形）。把不同原料切成厚薄均匀、长短一致
 的长方片。按色泽和荤素岔开，按刀面等距整齐地装入圆盘，装盘时原料要外宽内窄，前
 片搭后片顺时针方向镶摆一圈。圆盘中心一般要用其他冷菜堆摆成半球形。风车形因装盘
 成形如传统风车，故名。
 
-\recipelist{28,29,33,163,205,206,208,258,271}，“圆”。《四》本《八》本作“元”。
+\recipelist{28,29,33,163,205,206,208,258,271}。“圆”，《四》本《八》本作“元”。
 径改。
 
-\recipelist{29,30,31,32,96,177,179,265,269,293,295,310,311}，“铝锅”。各本皆作
+\recipelist{29,30,31,32,96,177,179,265,269,293,295,310,311}。“铝锅”，各本皆作
 “锑锅”。径改。
 
 \reciperef{30}。“捡去泡沫”，《四》本《八》本作“检去泡沫”。径改。“杆杖”，《四》
 本《八》本作“杆仗”。径改。
 
 \recipelist{33,34,42,68,88,89,93,97,117,127,151,154,160,163,200,202,206,237,%
-240,250}，“茨菰”。《四》本《八》本作“慈菇”。径改。
+240,250}。“茨菰”，《四》本《八》本作“慈菇”。径改。
 
-\recipelist{33,34,147,188,191}，“圆子”。《四》本《八》本作“元子”。径改。
+\recipelist{33,34,147,188,191}。“圆子”，《四》本《八》本作“元子”。径改。
 
 \reciperef{37}。“扳指”，《四》本《八》本作“斑指”，《中》本《七》本作“班指”。径
 改。“……至肥肠起着皱折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
 
-\recipelist{39,48,49}，“擀”。《四》本作“扞”。据《八》本改。
+\recipelist{39,48,49}。“擀”，《四》本作“扞”。据《八》本改。
 
 \reciperef{40}。“磉磴”。
 “磉”，{s\v{a}ng}{ㄙ\kern-.333333emㄤ\kern-.75em\raise.5ex\hbox{\v{}}\kern.25em}
@@ -137,30 +137,30 @@
 “磴”，{d\`{e}ng}{ㄉ\kern-.333333emㄥ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}
 石阶。
 
-\recipelist{41,42,71,121,257}，“𠟤”。疑误。
+\recipelist{41,42,71,121,257}。“𠟤”，疑误。
 
-\recipelist{41,265,270}，“臊”。《四》本《八》本作“骚”。径改。
+\recipelist{41,265,270}。“臊”，《四》本《八》本作“骚”。径改。
 
-\recipelist{44,49,87,106,117,206,248}，“烂”。《四》本《八》本作“滥”。径改。
+\recipelist{44,49,87,106,117,206,248}。“烂”，《四》本《八》本作“滥”。径改。
 
 \reciperef{48}。“水龙头”，《四》本《八》本作“水笼头”。径改。
 
-\recipelist{50,79,85,91,158,214,220,230,256,260,274}，“番茄”。各本皆作“蕃茄”。
+\recipelist{50,79,85,91,158,214,220,230,256,260,274}。“番茄”，各本皆作“蕃茄”。
 径改。
 
-\recipelist{52,63,149,254}，“劖”。《八》本作
+\recipelist{52,63,149,254}。“劖”，《八》本作
 “{\bfseries\raise.19em\hbox{\scalebox{.675}[.75]{免}}\kern-.675em%
 \lower.215em\hbox{\scalebox{.95}[.55]{⺀}}\kern-.405616em%
 \scalebox{.65}[1]{刂}}”，系已弃用之类推简化字。
 
-\recipelist{52,261}，“环喉”。猪或牛的主动脉血管。
+\recipelist{52,261}。“环喉”，猪或牛的主动脉血管。
 
 \reciperef{55}。《八》本目录中作“罐子肉”。误。《中》本目录中作“坛子肉”，内页
 中作“罎子肉”。
 
-\recipelist{55,69,153}，“须”。《四》本作“鬚”。据《八》本改。
+\recipelist{55,69,153}。“须”，《四》本作“鬚”。据《八》本改。
 
-\recipelist{55,186,188,189,223,261,288,293}，“珧柱”。《四》本《八》本作
+\recipelist{55,186,188,189,223,261,288,293}。“珧柱”，《四》本《八》本作
 “𧎼蛀”。《中》本作“𧎼柱”。径改。
 
 \reciperef{56}。“将烤池内的红杠炭捡于烤池四周”。“捡”，《四》本《八》本《中》本
@@ -173,12 +173,12 @@
 \reciperef{63}。各本皆作“劖（音沾……）”。误。据《康熙字典》，“劖”，锄衔切，
 {ch\'{a}n}{ㄔ\kern-.333333emㄢ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}。
 
-\recipelist{67,68,82,92,118,127,150,255,280,301}，“熘”。《四》本《八》本作
+\recipelist{67,68,82,92,118,127,150,255,280,301}。“熘”，《四》本《八》本作
 “溜”。径改。
 
 \reciperef{69}。“子姜”，《四》本《八》本做“仔姜”。径改。
 
-\recipelist{72,78,102,108,246,253}，“煺毛”。《四》本《八》本作“退毛”。径改。
+\recipelist{72,78,102,108,246,253}。“煺毛”，《四》本《八》本作“退毛”。径改。
 
 \reciperef{73}。“箅子”，《四》本作“篦子”，《八》本作“篾子”。径改。
 
@@ -193,7 +193,7 @@
 
 \reciperef{87}。“擀”，《四》本作“扞”，《八》本作“撖”。径改。
 
-\recipelist{93,123,137,192,251,292}，“趖”。《四》本《八》本作“梭”。径改。“趖”，
+\recipelist{93,123,137,192,251,292}。“趖”，《四》本《八》本作“梭”。径改。“趖”，
 {su\={o}}\,{ㄙ\kern-.333333emㄨ\kern-.333333emㄛ}［方言］移动。
 
 \reciperef{94}。“㮟”，《八》本作“扞”。误。“㮟”，{k\={a}}\,{ㄎ\kern-.25emㄚ}\,%
@@ -211,9 +211,9 @@
 
 \reciperef{106}。“锅内掺清汤”。“掺”，《四》本《八》本作“渗”。径改。
 
-\recipelist{111,295}，“罐”。《四》本作“罆”。据《八》本改。
+\recipelist{111,295}。“罐”，《四》本作“罆”。据《八》本改。
 
-\recipelist{120,121,123,223,257,262}，“𬂁”。“肫”之异体字。鸟类的胃。
+\recipelist{120,121,123,223,257,262}。“𬂁”，“肫”之异体字。鸟类的胃。
 
 \recipelist{120,129,130,131,132,133,134,135,136,137}等多篇，“鳃”。各本皆作
 “腮”。径改。
@@ -235,14 +235,14 @@
 \reciperef{144}。“酱油、白糖、醋、味精、水豆粉、料酒、清汤先兑成滋汁一碗。”“白
 糖”，《八》本作“冰糖”。
 
-\recipelist{147,150}，“鱼圆”。《四》本《八》本作“鱼元”。径改。
+\recipelist{147,150}。“鱼圆”，《四》本《八》本作“鱼元”。径改。
 
 \reciperef{148}。“咖喱”，《四》本《八》本作“咖哩”。径改。
 
-\recipelist{157,173,178,182,183,184,185,193,263}，“煨”。《四》本《八》本作
+\recipelist{157,173,178,182,183,184,185,193,263}。“煨”，《四》本《八》本作
 “喂”。径改。
 
-\recipelist{162,248,256,257,258}，“吐司”。《四》本《八》本作“土司”。径改。“吐
+\recipelist{162,248,256,257,258}。“吐司”，《四》本《八》本作“土司”。径改。“吐
 司”，烤面包片。［英~toast］
 
 \reciperef{163}。“鲜虾仁”，《四》本《八》本“鲜”前衍一“尽”字。径删。
@@ -255,12 +255,12 @@
 
 \reciperef{194}。“铝盘”，《四》本《八》本作“锑盘”。径改。
 
-\recipelist{202,204}，“红苕”。亦称番薯、红薯、甘薯。
+\recipelist{202,204}。“红苕”，亦称番薯、红薯、甘薯。
 
 \reciperef{204}。“青糖”，《四》本《八》本作“清糖”，径改。“青糖”，粗制赤（红）
 糖。
 
-\recipelist{204,207}，“橘红”。《四》本《八》本作“桔红”。径改。
+\recipelist{204,207}。“橘红”，《四》本《八》本作“桔红”。径改。
 
 \reciperef{205}。“圆子”，《四》本《八》本《中》本作“元子”。径改。“入沸水潦过
 心”。“潦”，用开水略煮。
@@ -272,9 +272,9 @@
 \reciperef{217}。“再放入炒好的馅于萝卜腹内，用盖盖好……”\\%
 “用盖盖好”，《四》本《八》本作“用盖好”。径补。
 
-\recipelist{223,261}，“什锦”。《四》本《八》本作“什景”。径改。
+\recipelist{223,261}。“什锦”，《四》本《八》本作“什景”。径改。
 
-\recipelist{225,226}，“𥑲水”。盐卤。“𥑲”字疑误。
+\recipelist{225,226}。“𥑲水”，盐卤。“𥑲”字疑误。
 
 \reciperef{228}。“四张豆腐皮一叠，如是再重四张，共为两叠。”“叠”，《四》本《八》
 本作“迭”。径改。“如是”，《四》本《八》本作“如果”。径改。
@@ -302,7 +302,7 @@
 \reciperef{267}。“扳指”，《四》本《八》本《重》本作“斑指”。径改。“……以防炸糊。”
 “糊”，《四》本《八》本《重》本皆作“胡”。径改。
 
-\recipelist{267,308}，“汆一道”。《四》本《八》本作“川一道”。径改。
+\recipelist{267,308}。“汆一道”，《四》本《八》本作“川一道”。径改。
 
 \reciperef{269}。“竹荪”，《四》本《八》本《重》本皆作“竹参”。径改。
 
