--- a/latex/recipe-123.tex
+++ b/latex/recipe-123.tex
@@ -27,11 +27,11 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{麻辣𬂁松}
+\begin{recipe}{麻辣肫松}
 
 \ingredients
 
-\ingredient{𬂁肝}{六副}
+\ingredient{肫肝}{六副}
 \ingredient{干辣椒}{三钱}
 \ingredient{花椒}{二钱}
 \ingredient{酱油}{一两}
@@ -45,14 +45,14 @@
 
 \preparation
 
-\step 𬂁肝撕皮，清洗干净，切成二粗丝；辣椒去籽，切成二粗丝，姜拍破。
+\step 肫肝撕皮，清洗干净，切成二粗丝；辣椒去籽，切成二粗丝，姜拍破。
 
-\step 切好的𬂁肝丝，加酱油、料酒、姜、葱，拌和均匀，渍十分钟，摊在盘内，盘子斜
+\step 切好的肫肝丝，加酱油、料酒、姜、葱，拌和均匀，渍十分钟，摊在盘内，盘子斜
 放，去净血水。
 
-\step 油在锅内烧至八成热，将𬂁肝炸干水气捞起；滗去炸油，留油二两，把干辣椒煵成
-黄色；倒下花椒，烹入料酒，趖下𬂁肝，加酱油，掺汤，下味精、白糖，滋汁收干，淋香
-油于𬂁肝上，几簸起锅。
+\step 油在锅内烧至八成热，将肫肝炸干水气捞起；滗去炸油，留油二两，把干辣椒煵成
+黄色；倒下花椒，烹入料酒，趖下肫肝，加酱油，掺汤，下味精、白糖，滋汁收干，淋香
+油于肫肝上，几簸起锅。
 
 \features
 
