--- a/latex/recipe-223.tex
+++ b/latex/recipe-223.tex
@@ -35,7 +35,7 @@
 \ingredient{肥膘}{二两}
 \ingredient{豆腐}{四个}
 \ingredient{鸡蛋清}{五个}
-\ingredient{𬂁肝}{二个}
+\ingredient{肫肝}{二个}
 \ingredient{熟猪肚}{五钱}
 \ingredient{脑花}{一个}
 \ingredient{熟鸡肉}{一两}
