--- a/latex/recipe-257.tex
+++ b/latex/recipe-257.tex
@@ -34,7 +34,7 @@
 \ingredient{吐司}{一磅}
 \ingredient{肥膘}{二两}
 \ingredient{鸡蛋清}{四个}
-\ingredient{𬂁肝}{四个}
+\ingredient{肫肝}{四个}
 \ingredient{鲜鱼}{八两}
 \ingredient{盐}{四分}
 \ingredient{味精}{二分}
@@ -51,7 +51,7 @@
 \step 吐司切成三分厚片子（共四片），鲜鱼打成“鱼糁”，每个吐司片上先抹蛋清豆粉，
 再涂上鱼糁，用手抹平整。
 
-\step 𬂁肝四个去掉两面皮子，每个𠟤为六个鸡冠花的形式（共二十四个），用盐、料酒
+\step 肫肝四个去掉两面皮子，每个𠟤为六个鸡冠花的形式（共二十四个），用盐、料酒
 少许，抹匀后分别插在吐司上（每片六个分两边插），上笼蒸五分钟取出晾冷，每片吐司
 再开为六片待用。
 
