--- a/latex/recipe-262.tex
+++ b/latex/recipe-262.tex
@@ -45,7 +45,7 @@
 \ingredient{菜油}{一斤耗三两}
 \ingredient{葱}{二钱}
 \ingredient{白菜心}{三两}
-\ingredient{鸡𬂁肝}{三个}
+\ingredient{鸡肫肝}{三个}
 \ingredient{味精}{三分}
 \ingredient{菠菜}{五两}
 \ingredient{猪腰}{四两}
@@ -57,7 +57,7 @@
 \preparation
 
 \step 鲫鱼洗净，去鳞，去肠杂，去刺（刺留用），用刀切成二寸长、一分厚、宽同鱼身
-的薄片。鸡𬂁肝洗净，去表皮，切成薄片。生鸡脯肉片为一寸长、八分宽的薄片。猪腰去
+的薄片。鸡肫肝洗净，去表皮，切成薄片。生鸡脯肉片为一寸长、八分宽的薄片。猪腰去
 筋和腰臊，切成鸡脯大小的薄片（以上薄片，愈薄愈好）。这四种片称为“四生片”，分别
 摆于七寸盘中成风车形。
 
