--- a/latex/recipe-120.tex
+++ b/latex/recipe-120.tex
@@ -32,7 +32,7 @@
 \ingredients
 
 \ingredient{肚头}{五两}
-\ingredient{𬂁肝}{二个}
+\ingredient{肫肝}{二个}
 \ingredient{竹荪}{一钱}
 \ingredient{盐}{一分}
 \ingredient{料酒}{二钱}
@@ -45,14 +45,14 @@
 \step 扯肚头，泡发竹荪，砸茸子。
 
 \step 肚头去皮去油筋，用立刀切、斜刀片，每三刀一断，宽四至五分、长一寸二的鱼鳃
-片；𬂁肝去外皮和底板，切每三刀一断的十字花纹（切深不切断），均用冷水漂起；竹荪
+片；肫肝去外皮和底板，切每三刀一断的十字花纹（切深不切断），均用冷水漂起；竹荪
 洗净，切大一字条，沸水汆，冷水漂，用汤过一次。
 
-\step 切好的肚头、𬂁肝，捞起挤干水份，入碗用沸水冲一次，烫约六分火，捞起挤干，
+\step 切好的肚头、肫肝，捞起挤干水份，入碗用沸水冲一次，烫约六分火，捞起挤干，
 盛走菜碗内。
 
 \step 锅内掺特级清汤，见开用肉茸扫净泡沫，下竹荪，加胡椒、盐、料酒、味精，舀入
-盛肚头、𬂁肝的碗内即成。
+盛肚头、肫肝的碗内即成。
 
 \features
 
