--- a/latex/recipe-158.tex
+++ b/latex/recipe-158.tex
@@ -43,7 +43,8 @@
 
 \preparation
 
-\step 鲜虾挤肉，淘洗干净，番茄烫后去皮、去蒂、去籽，用刀切成与虾肉大的丁颗。
+\step 鲜虾挤肉，淘洗干净，番茄烫后去皮、去蒂、去籽，用刀切成与虾肉一般大的丁
+颗。
 
 \step 虾肉滤干水份，与蛋清豆粉加盐少许调匀。水豆粉、盐、鸡汤各少许兑成滋汁。
 
