Rewrite the note for FENGCHE

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -107,10 +107,10 @@
 把原料切成薄厚均匀、长短一致的长方片或条。先用碎料垫底，然后按顺序摆成刀口等距
 的两行，最后在两行中间覆盖一行整齐装盘。因装盘成形为三叠，如叠泉，故名。
 
-\recipelist{26,95,207,262}。“风车”（风车形）。把不同原料切成厚薄均匀、长短一致
-的长方片。按色泽和荤素岔开，按刀面等距整齐地装入圆盘，装盘时原料要外宽内窄，前
-片搭后片顺时针方向镶摆一圈。圆盘中心一般要用其他冷菜堆摆成半球形。风车形因装盘
-成形如传统风车，故名。
+\recipelist{26,95,207,262}。“风车”（风车形），另一种装盘形式。把多种原料切成厚
+薄均匀、长短一致的长方片。按色泽和荤素岔开，前片搭后片顺时针方向镶摆一圈，刀面
+整齐地装入圆盘。装盘时原料露出的部分外宽内窄，刀口间距均匀。圆盘中心通常用其他
+冷菜堆摆成半球形，垫在主要原料之下。因装盘成形如传统风车，故名。
 
 \recipelist{28,29,33,163,205,206,208,258,271}。“圆”，《四》本《八》本作“元”。
 径改。
