Make paragraphs shorter

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -116,13 +116,13 @@
 径改。
 
 \recipelist{29,30,31,32,96,177,179,265,269,293,295,310,311}。“铝锅”，各本皆作
-“锑锅”。径改。
+“锑锅”。\xeCJKnobreak{}径改。
 
 \reciperef{30}。“捡去泡沫”，《四》本《八》本作“检去泡沫”。径改。“杆杖”，《四》
 本《八》本作“杆仗”。径改。
 
-\recipelist{33,34,42,68,88,89,93,97,117,127,151,154,160,163,200,202,206,237,%
-240,250}。“茨菰”，《四》本《八》本作“慈菇”。径改。
+\recipelist{33,34,42,68,88,89,93,97,117,127,151}等多篇。“茨菰”，《四》本《八》
+本作“慈菇”。径改。
 
 \recipelist{33,34,147,188,191}。“圆子”，《四》本《八》本作“元子”。径改。
 
