--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -295,7 +295,7 @@
 《中》本补。
 
 \reciperef{253}。《中》本标题作“子母会”。“因鸽子与鸽蛋同配一菜，故名子母会
-（烩）。”《四》本《八》本括号部分在句号后面。《中》本无括号部分内容。据《标点
+（烩）。”《四》本《八》本括号部分在句号之后。《中》本无括号部分内容。据《标点
 符号用法》\textsc{gb/t 15834--2011}，将括号部分移至句号之前。
 
 \reciperef{264}。“抽去……扦子骨……入抽去扦子骨处”。“扦”，~《四》本作“杄”，《八》
