--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -55,6 +55,8 @@
 \usepackage{scalefnt}
 \usepackage{pdfpages}
 \usepackage{pdfoverlay}
+\usepackage{pgfornament}
+	\usetikzlibrary{calc}
 
 \begin{document}
 \begin{cookbook}
@@ -590,6 +592,7 @@
 \clearpage
 \hypertarget{colophon}{}%
 \bookmark[dest=colophon,level=section]{版次标记}%
+\enlargethispage{1.75\baselineskip}
 \input{colophon.tex}
 \cleardoublepage
 
