Decoration of the collation notes

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -59,7 +59,9 @@
 校勘基本方针。保留方言用字。修正异体字。对已经弃用的同音简化字和类推简化字，恢
 复原字。修正误植、错字、别字。
 
-\null%
+\vspace{.5\baselineskip plus .5\baselineskip minus .5\baselineskip}%
+{\noindent\null\hfill\pgfornament[width=64mm]{88}\hfill\null}%
+\vspace{1\baselineskip plus .5\baselineskip minus .5\baselineskip}%
 
 \recipelist{2,7,8,9,20,22,24,28,29,31,36,37,38}等多篇。“滗”，《四》本《八》本
 作“泌”。径改。“滗”，滤。
