--- a/latex/recipe-021.tex
+++ b/latex/recipe-021.tex
@@ -55,7 +55,7 @@
 \step 选猪后腿净瘦肉一斤，不拘规格，用平刀片成极薄的肉片，贴于筲箕背，将肉铺开
 晾起，肉面洒上酱油、胡椒面、料酒等，待两三小时后水气已晾干。
 
-\step 将菜油烧开，倒入干肉片炸黄，铲于墩子上，切成一寸大小的姜糖块（即棋子块）。
+\step 将菜油烧开，倒入干肉片炸黄，铲于墩子上，切成一寸大小的姜糖块（即旗子块）。
 
 \step 化猪油二两入锅烧热，即投入葱、姜、蒜、醋、白糖、清汤、香油，勾二流芡成
 汁，最后将炕酥的肉片、大头菜倒入，一烹即成。
