--- a/latex/recipe-084.tex
+++ b/latex/recipe-084.tex
@@ -55,7 +55,7 @@
 锅，摊成直径八寸、厚五厘的圆片，铲起放入盛有二汤的碗内；将鸡茸一直照样摊完（共
 八片），放入碗内待用。
 
-\step 火腿、口蘑、鲜笋、鸡皮都切成棋子块的小片。将锅放在火炉上，下猪油，倒入火
+\step 火腿、口蘑、鲜笋、鸡皮都切成旗子块的小片。将锅放在火炉上，下猪油，倒入火
 腿、口蘑、鲜笋、鸡皮、豌豆尖苞，炒动几转，倒下鸡汤四两，勾芡，然后将泡在碗内的
 鸡茸片滗去二汤下锅造匀，起锅时淋入鸡油即成。
 
