--- a/latex/recipe-175.tex
+++ b/latex/recipe-175.tex
@@ -48,9 +48,9 @@
 
 \preparation
 
-\step 先将豆腐皮切成六分宽的棋子块，用清水漂起，并滴入碱水于清水内，再放入锅内
+\step 先将豆腐皮切成六分宽的旗子块，用清水漂起，并滴入碱水于清水内，再放入锅内
 泹一下，到豆腐皮软和时即捞起，用清水漂起待用；选用大张明嫩的鱿鱼，同样改成六分
-宽的棋子块，用开水洗去碱味，用清水漂起；鸡皮去尽细毛，同样切成六分宽的棋子块；
+宽的旗子块，用开水洗去碱味，用清水漂起；鸡皮去尽细毛，同样切成六分宽的旗子块；
 火腿切成七分宽、一寸二长的骨牌片子。
 
 \step 将锅放在旺火上，倒入化猪油，烧至五成热时，放下姜、葱，爆出香味，再倒入清
