--- a/latex/recipe-248.tex
+++ b/latex/recipe-248.tex
@@ -52,7 +52,7 @@
 等。鸡蛋二个摊成蛋皮，连同丝瓜皮、火腿各修切成小瓜子片、鱼眼睛片，各七十二片待
 用。
 
-\step 吐司切成一寸二宽、一寸八长、一分五厚的棋子块二十四片。鸡脯、肥膘、蛋清等
+\step 吐司切成一寸二宽、一寸八长、一分五厚的旗子块二十四片。鸡脯、肥膘、蛋清等
 搅成“鸡糁”。每片吐司上先涂上一层鸡糁，约二分厚；再将半边鸽蛋嵌在中间，紧挨鸽蛋
 的周围点缀小瓜子片和鱼眼睛片，增加美观，上笼汽五分钟成半制成品取下。
 
