--- a/latex/recipe-227.tex
+++ b/latex/recipe-227.tex
@@ -52,7 +52,7 @@
 待用。
 
 \step 鸡蛋黄调匀，盛入碟内，上笼蒸熟，成蛋糕状。丝瓜刮去粗茸，车下瓜皮，泹熟，
-在清水内漂过。分别用刀将蛋糕、瓜皮改成二分宽棋子块。火腿切成二分见方的薄片。
+在清水内漂过。分别用刀将蛋糕、瓜皮改成二分宽旗子块。火腿切成二分见方的薄片。
 
 \step 大平瓷盘一个，先用猪油抹上，然后把搅匀的豆腐糁用调羹舀成三十二份，在盘上
 拍压成直径一寸二、厚约三分的圆形。再将火腿、瓜皮、蛋糕等片嵌成金钱形，上笼蒸三
