Fix note for QIZIKUAI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -98,8 +98,6 @@
 \recipelist{19,22,56,99,155,189,208,244}。“像”，\null《四》本《八》本作“象”。
 径改。
 
-\recipelist{21,84,175,227,248}。“棋子块”，《四》本《八》本作“旗子块”。径改。
-
 \recipelist{22,33}。“肉圆”，《四》本《八》本作“肉元”。径改。
 
 \recipelist{24,48,55,75,76,84,92,107,111}等多篇。“口蘑”，《四》本《八》本作
@@ -258,6 +256,8 @@
 \reciperef{180}。“带丝”，《四》本《八》本作“代丝”。径改。“带丝”，海带丝。
 
 \reciperef{183}。“擀”，《四》本《八》本作“扞”。径改。
+
+\reciperef{187}。“旗子块”，《四》本《八》本作“棋子块”。径改。
 
 \reciperef{194}。“铝盘”，《四》本《八》本作“锑盘”。径改。
 
