Revise note for SANDIESHUI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -103,9 +103,9 @@
 \recipelist{24,48,55,75,76,84,92,107,111}等多篇。“口蘑”，《四》本《八》本作
 “口茉”。据《中》本《重》本改。
 
-\recipelist{26,93,96,110,111,219,244}。“三叠水”，冷菜菜肴的一种传统装盘形式。
-把原料切成薄厚均匀、长短一致的长方片或条。先用碎料垫底，然后按顺序摆成刀口等距
-的两行，最后在两行中间覆盖一行整齐装盘。因装盘成形为三叠，如叠泉，故名。
+\recipelist{26,93,96,110,111,219,244}。“三叠水”，菜肴的一种传统装盘形式。多用
+于冷菜。先取菜肴的片（或条），按顺序摆成两行，然后再在两行中部覆盖一行即成。要
+求刀工处理时注意厚薄均匀，长短一致，并按刀口等距排列，整齐入盘。
 
 \recipelist{26,95,207,262}。“风车”（风车形），另一种装盘形式。把多种原料切成厚
 薄均匀、长短一致的长方片。按色泽和荤素岔开，前片搭后片顺时针方向镶摆一圈，刀面
