Revise note for FENGCHE

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -107,10 +107,10 @@
 于冷菜。先取菜肴的片（或条），按顺序摆成两行，然后再在两行中部覆盖一行即成。要
 求刀工处理时注意厚薄均匀，长短一致，并按刀口等距排列，整齐入盘。
 
-\recipelist{26,95,207,262}。“风车”（风车形），另一种装盘形式。把多种原料切成厚
-薄均匀、长短一致的长方片。按色泽和荤素岔开，前片搭后片顺时针方向镶摆一圈，刀面
-整齐地装入圆盘。装盘时原料露出的部分外宽内窄，刀口间距均匀。圆盘中心通常用其他
-冷菜堆摆成半球形，垫在主要原料之下。因装盘成形如传统风车，故名。
+\recipelist{26,95,207,262}。“风车”（风车形），传统装盘形式之一。因形似风车，故
+名。多用于冷菜摆拼。用荤素原料改成厚薄一致的长方片，将色泽和荤素岔开，按刀面等
+距、整齐地装入圆盘；装盘时，原料要下宽上窄、前搭后、顺时针方向镶摆一圈；圆盘中
+部可用其他冷菜堆摆成形。
 
 \recipelist{28,29,33,163,205,206,208,258,271}。“圆”，《四》本《八》本作“元”。
 径改。
