Add a note for YINMI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -310,6 +310,9 @@
 
 \recipelist{267,308}。“汆一道”，《四》本《八》本作“川一道”。径改。
 
+\reciperef{268}。“阴米”。将糯米淘净，用水稍浸泡，捞出沥干水分，入笼用旺火蒸熟，
+取出晾干即成。
+
 \reciperef{269}。“竹荪”，《四》本《八》本《重》本皆作“竹参”。径改。
 
 \reciperef{273}。各本标题皆作“汗蒸鱼”。径改。
