--- a/latex/recipe-041.tex
+++ b/latex/recipe-041.tex
@@ -41,7 +41,7 @@
 
 \preparation
 
-\step 猪腰每个对剖成两片，去油皮和腰臊，每片𠟤成斜纹花刀，边沿修整齐，根据猪腰
+\step 猪腰每个对剖成两片，去油皮和腰臊，每片剞成斜纹花刀，边沿修整齐，根据猪腰
 大小切二至三刀成正方片，用清水洗净，在沸水烫三火，入清水内漂冷。
 
 \step 锅内加清汤烧沸，捞起漂冷的腰方片，滤干水份，入汤中再烫五成火，捞入走菜碗
