--- a/latex/recipe-121.tex
+++ b/latex/recipe-121.tex
@@ -44,7 +44,7 @@
 \preparation
 
 \step 扯下靠肚尖子一寸长的肚头，撕洗干净，再把油筋片干净，片成长一寸五分、宽六
-分的片子两片；靠两长边约二分宽处划穿两根长约一寸二的直线，逢中再𠟤一刀，以便入
+分的片子两片；靠两长边约二分宽处划穿两根长约一寸二的直线，逢中再剞一刀，以便入
 味。肫肝切成两瓣，片平两边，逢中划透约六分长的直线；将肚片顺折穿入肫肝裂缝，
 再将肚片的一端折转，穿入肚片另一端的裂缝中，使之相互穿稳不脱，用清水漂起。香
 菜掐留叶子，与胡椒面分别装入小碟。
