Correct note for JI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -137,7 +137,7 @@
 “磴”，{d\`{e}ng}{ㄉ\kern-.333333emㄥ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}
 石阶。
 
-\recipelist{41,42,71,121,257}。“𠟤”，疑误。
+\recipelist{41,42,71,121,257}。“剞”，《四》本《八》本作“𠟤”。径改。
 
 \recipelist{41,265,270}。“臊”，《四》本《八》本作“骚”。径改。
 
