--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -167,8 +167,8 @@
 皆作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
 《中》本改。
 
-\reciperef{61}。“窝油”，采用一种传统手工技艺酿造的酱油。因其原汁是从盛曲料容器
-上的特制小孔慢慢浸滴而出，故得名滴窝油。又称白酱油。
+\reciperef{61}。“窝油”，采用传统手工技艺酿造的酱油。因其酱胚产生的原汁液是从盛
+曲料容器慢慢滴入窝内，故名窝油。又称白酱油。
 
 \reciperef{63}。各本皆作“劖（音沾……）”。误。据《康熙字典》，“劖”，锄衔切，
 {ch\'{a}n}{ㄔ\kern-.333333emㄢ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}。
