--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -199,8 +199,7 @@
 \reciperef{94}。“㮟”，《八》本作“扞”。误。“㮟”，{k\={a}}\,{ㄎ\kern-.25emㄚ}\,%
 （紧）夹，扎，刺。
 
-\reciperef{95}。《八》本标题作“刷把鸡丝（汤）”。“上笼汽三分钟”。“汽”，《八》本
-作“气”。误。
+\reciperef{95}。《八》本标题作“刷把鸡丝（汤）”。
 
 \reciperef{100}。“叫花鸡”，《四》本《八》本作“叫化鸡”，径改。“𫃕”，%
 {c\'{i}}\,{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}\,粘稠。
