Revise collation notes

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -63,42 +63,41 @@
 {\noindent\null\hfill\pgfornament[width=64mm]{88}\hfill\null}%
 \vspace{1\baselineskip plus .5\baselineskip minus .5\baselineskip}%
 
-\recipelist{2,7,8,9,20,22,24,28,29,31,36,37,38}等多篇。“滗”，《四》本《八》本
-作“泌”。径改。“滗”，滤。
+\recipelist{2,7,8,9,20,22,24,28,29,31,36,37,38}等多篇。“滗”，《四》本作“泌”。
+径改。“滗”，滤。
 
-\recipelist{4,24,71,79,92,94,100,109,112}等多篇。“搛”，《四》本《八》本作
-“扦”。径改。“搛”，（用筷子）夹。
+\recipelist{4,24,71,79,92,94,100,109,112}等多篇。“搛”，《四》本作“扦”。径改。
+“搛”，（用筷子）夹。
 
-\reciperef{6}。“锅巴”，《四》本《八》本作“锅粑”。据《中》本改。
+\reciperef{6}。“锅巴”，《四》本作“锅粑”。据《中》本改。
 
-\reciperef{7}。《四》本《八》本无脚注{\footnotesize\circled{1}}。据《中》本补。
+\reciperef{7}。《四》本无脚注{\footnotesize\circled{1}}。据《中》本补。
 
 \recipelist{8,11,16,17,35,54,73,78,109}等多篇。“醪糟”，各本皆作“𰪿糟”。径改。
 “𰪿”系“𫃑”之类推简化字。
 
-\reciperef{9}。“使全部蘸裹在肉片上”。“蘸”，《四》本《八》本作“醮”。据《中》本
-改。
+\reciperef{9}。“使全部蘸裹在肉片上”。“蘸”，《四》本作“醮”。据《中》本改。
 
 \recipelist{15,26,35,73,95,96}等多篇。“鱼碗”，一种盛菜或装汤的大碗。其尺寸比斗
 碗大，约为七至十一寸，碗深度比斗碗稍浅。也叫小鱼钵。“斗碗”，也是指大碗。旧时民
 间指较大的土碗。
 
-\recipelist{16,66,115,164}。“腌”，《四》本《八》本作“醃”。径改。
+\recipelist{16,66,115,164}。“腌”，《四》本作“醃”。径改。
 
 \reciperef{17}。“瓤”，各本皆作“穰”。径改。
 
 \recipelist{18,19}。“尖刀圆子”，《四》本《八》本《七》本作“尖刀元子”。《中》本
 作“尖刀丸子”。径改。
 
-\recipelist{18,279}。“汆”，《四》本《八》本作“川”。径改。
+\recipelist{18,279}。“汆”，《四》本作“川”。径改。
 
 \recipelist{19,20,56,195,254}所附共十一副插图。《四》本《八》本插图，线条边缘
 参差不齐模糊不清。据《中》本插图重制。
 
-\recipelist{22,33}。“肉圆”，《四》本《八》本作“肉元”。径改。
+\recipelist{22,33}。“肉圆”，《四》本作“肉元”。径改。
 
-\recipelist{24,48,55,75,76,84,92,107,111}等多篇。“口蘑”，《四》本《八》本作
-“口茉”。据《中》本《重》本改。
+\recipelist{24,48,55,75,76,84,92,107,111}等多篇。“口蘑”，《四》本作“口茉”。据
+《中》本《重》本改。
 
 \recipelist{26,93,96,110,111,219,244}。“三叠水”，菜肴的一种传统装盘形式。多用
 于冷菜。先取菜肴的片（或条），按顺序摆成两行，然后再在两行中部覆盖一行即成。要
@@ -109,21 +108,20 @@
 距、整齐地装入圆盘；装盘时，原料要下宽上窄、前搭后、顺时针方向镶摆一圈；圆盘中
 部可用其他冷菜堆摆成形。
 
-\recipelist{28,29,33,163,205,206,208,258,271}。“圆”，《四》本《八》本作“元”。
-径改。
+\recipelist{28,29,33,163,205,206,208,258,271}。“圆”，《四》本作“元”。径改。
 
 \recipelist{29,30,31,32,96,177,179,265,269,293,295,310,311}。“铝锅”，各本皆作
 “锑锅”。\xeCJKnobreak{}径改。
 
 \reciperef{30}。“捡去泡沫”，《四》本《八》本作“检去泡沫”。径改。“杆杖”，《四》
-本《八》本作“杆仗”。径改。
+本作“杆仗”。径改。
 
-\recipelist{33,34,42,68,88,89,93,97,117,127,151}等多篇。“茨菰”，《四》本《八》
-本作“慈菇”。径改。
+\recipelist{33,34,42,68,88,89,93,97,117,127,151}等多篇。“茨菰”，《四》本作“慈
+菇”。径改。
 
-\recipelist{33,34,147,188,191}。“圆子”，《四》本《八》本作“元子”。径改。
+\recipelist{33,34,147,188,191}。“圆子”，《四》本作“元子”。径改。
 
-\reciperef{37}。“扳指”，《四》本《八》本作“斑指”，《中》本《七》本作“班指”。径
+\reciperef{37}。“扳指”，《四》本作“斑指”，《中》本《七》本作“班指”。径
 改。“……至肥肠起着皱折为适合。”“皱折”，《四》本作“绉折”。据《八》本改。
 
 \recipelist{39,48,49}。“擀”，《四》本作“扞”。据《八》本改。
@@ -134,13 +132,13 @@
 “磴”，{d\`{e}ng}{ㄉ\kern-.333333emㄥ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}
 石阶。
 
-\recipelist{41,42,71,121,257}。“剞”，《四》本《八》本作“𠟤”。径改。
+\recipelist{41,42,71,121,257}。“剞”，《四》本作“𠟤”。径改。
 
-\recipelist{41,265,270}。“臊”，《四》本《八》本作“骚”。径改。
+\recipelist{41,265,270}。“臊”，《四》本作“骚”。径改。
 
-\recipelist{44,49,87,106,117,206,248}。“烂”，《四》本《八》本作“滥”。径改。
+\recipelist{44,49,87,106,117,206,248}。“烂”，《四》本作“滥”。径改。
 
-\reciperef{48}。“水龙头”，《四》本《八》本作“水笼头”。径改。
+\reciperef{48}。“水龙头”，《四》本作“水笼头”。径改。
 
 \recipelist{50,79,85,91,158,214,220,230,256,260,274}。“番茄”，各本皆作“蕃茄”。
 径改。
@@ -149,8 +147,8 @@
 
 \recipelist{55,69,153}。“须”，《四》本作“鬚”。据《八》本改。
 
-\recipelist{55,186,188,189,223,261,288,293}。“珧柱”，《四》本《八》本作
-“𧎼蛀”。《中》本作“𧎼柱”。径改。
+\recipelist{55,186,188,189,223,261,288,293}。“珧柱”，《四》本作“𧎼蛀”。《中》
+本作“𧎼柱”。径改。
 
 \reciperef{56}。“将烤池内的红杠炭捡于烤池四周”。“捡”，《四》本《八》本《中》本
 皆作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
@@ -162,12 +160,11 @@
 \reciperef{63}。各本皆作“劖（音沾……）”。误。据《康熙字典》，“劖”，锄衔切，
 {ch\'{a}n}{ㄔ\kern-.333333emㄢ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}。
 
-\recipelist{67,68,82,92,118,127,150,255,280,301}。“熘”，《四》本《八》本作
-“溜”。径改。
+\recipelist{67,68,82,92,118,127,150,255,280,301}。“熘”，《四》本作“溜”。径改。
 
-\reciperef{69}。“子姜”，《四》本《八》本做“仔姜”。径改。
+\reciperef{69}。“子姜”，《四》本作“仔姜”。径改。
 
-\recipelist{72,78,102,108,246,253}。“煺毛”，《四》本《八》本作“退毛”。径改。
+\recipelist{72,78,102,108,246,253}。“煺毛”，《四》本作“退毛”。径改。
 
 \reciperef{73}。“箅子”，《四》本作“篦子”，《八》本作“篾子”。径改。
 
@@ -175,138 +172,133 @@
 “……盛产于成都附近山崖中。”“三菌”，鸡𭎂（㙡）{z\={o}ng}%
 {ㄗ\kern-.333333emㄨ\kern-.333333emㄥ}菌。
 
-\reciperef{81}。“淖”，
-{n\`{a}o}{ㄋ\kern-.333333emㄠ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}\,泥也。
+\reciperef{81}。“淖”，{n\`{a}o}%
+{ㄋ\kern-.333333emㄠ\kern-.75em\raise.5ex\hbox{\`{}}\kern.25em}\,泥也。
 
-\recipelist{84,219}。“化鸡油”，《四》本《八》本作“鸡化油”。乙正。
+\recipelist{84,219}。“化鸡油”，《四》本作“鸡化油”。乙正。
 
 \reciperef{87}。“擀”，《四》本作“扞”，《八》本作“撖”。径改。
 
-\recipelist{93,123,137,192,251,292}。“趖”，《四》本《八》本作“梭”。径改。“趖”，
+\recipelist{93,123,137,192,251,292}。“趖”，《四》本作“梭”。径改。“趖”，
 {su\={o}}\,{ㄙ\kern-.333333emㄨ\kern-.333333emㄛ}［方言］移动。
 
 \reciperef{94}。“㮟”，{k\={a}}\,{ㄎ\kern-.25emㄚ}\,（紧）夹，扎，刺。
 
 \reciperef{95}。《八》本标题作“刷把鸡丝（汤）”。
 
-\reciperef{100}。“叫花鸡”，《四》本《八》本作“叫化鸡”，径改。“𫃕”，%
+\reciperef{100}。“叫花鸡”，《四》本作“叫化鸡”，径改。“𫃕”，%
 {c\'{i}}\,{ㄘ\kern-.75em\raise.5ex\hbox{\'{}}\kern.25em}\,粘稠。
 
 \reciperef{101}。“鸡翘”，鸡屁股。
 
-\reciperef{102}。“魔芋”，《四》本《八》本作“茉芋”。径改。
+\reciperef{102}。“魔芋”，《四》本作“茉芋”。径改。
 
-\reciperef{106}。“锅内掺清汤”。“掺”，《四》本《八》本作“渗”。径改。
+\reciperef{106}。“锅内掺清汤”。“掺”，《四》本作“渗”。径改。
 
 \recipelist{111,295}。“罐”，《四》本作“罆”。据《八》本改。
 
-\recipelist{120,121,123,223,257,262}。“肫”，《四》本《八》本作“𬂁”。径改。
-“肫”，鸟类的胃。
+\recipelist{120,121,123,223,257,262}。“肫”，《四》本作“𬂁”。径改。“肫”，鸟类的
+胃。
 
 \recipelist{120,129,130,131,132,133,134,135,136,137}等多篇，“鳃”。各本皆作
 “腮”。径改。
 
-\reciperef{121}。《四》本《八》本标题作“川双脆”。径改。
+\reciperef{121}。《四》本标题作“川双脆”。径改。
 
-\reciperef{142}。“甲鱼”，《四》本《八》本全篇皆作“足鱼”。据《中》本《七》本
-改。“肉𤆵可口”，《中》本作“肉烂可口”。“但须注意甲鱼肉不可与苋菜同食”。“甲鱼
-肉”，《中》本作“龟鳖肉”。
+\reciperef{142}。“甲鱼”，《四》本全篇皆作“足鱼”。据《中》本《七》本改。“肉𤆵可
+口”，《中》本作“肉烂可口”。“但须注意甲鱼肉不可与苋菜同食”。“甲鱼肉”，《中》本
+作“龟鳖肉”。
 
-\reciperef{143}。《四》本《八》本中脚注标记{\footnotesize\circled{1}}在“原料”
-段落中“鲢鱼头一个约四、五斤”之后。据《中》本改至标题之后。“竹篾箅”，《四》本
-《八》本作“竹篾篦”。据《中》本改。“即用筷子将鱼肉轻轻拨下”，《四》本《八》本作
-“……轻轻试一下”。据《中》本改。脚注{\footnotesize\circled{1}}中“而不是一般池塘
-养的鲢鱼”，《四》本《八》本无此句。据《中》本补。之后“但四川人……”，《四》本
-《八》本无“但”字。据《中》本补。脚注{\footnotesize\circled{1}}中“身圆口大”，
-《四》本《八》本作“身团口大”。据《中》本改。
+\reciperef{143}。《四》本中脚注标记{\footnotesize\circled{1}}在“原料”段落中“鲢
+鱼头一个约四、五斤”之后。据《中》本改至标题之后。“竹篾箅”，《四》本作“竹篾篦”。
+据《中》本改。“即用筷子将鱼肉轻轻拨下”，《四》本作“……轻轻试一下”。据《中》本
+改。脚注{\footnotesize\circled{1}}中“而不是一般池塘养的鲢鱼”，《四》本无此句。
+据《中》本补。之后“但四川人……”，《四》本无“但”字。据《中》本补。脚注
+{\footnotesize\circled{1}}中“身圆口大”，《四》本作“身团口大”。据《中》本改。
 
 \reciperef{144}。“酱油、白糖、醋、味精、水豆粉、料酒、清汤先兑成滋汁一碗。”“白
 糖”，《八》本作“冰糖”。
 
-\recipelist{147,150}。“鱼圆”，《四》本《八》本作“鱼元”。径改。
+\recipelist{147,150}。“鱼圆”，《四》本作“鱼元”。径改。
 
-\reciperef{148}。“咖喱”，《四》本《八》本作“咖哩”。径改。
+\reciperef{148}。“咖喱”，《四》本作“咖哩”。径改。
 
-\recipelist{157,173,178,182,183,184,185,193,263}。“煨”，《四》本《八》本作
-“喂”。径改。
+\recipelist{157,173,178,182,183,184,185,193,263}。“煨”，《四》本作“喂”。径改。
 
-\reciperef{158}。“用刀切成与虾肉一般大的丁颗”，《四》本《八》本无“一般”二字。
-文意不通。径补。
+\reciperef{158}。“用刀切成与虾肉一般大的丁颗”，《四》本无“一般”二字。文意不通。
+径补。
 
-\recipelist{162,248,256,257,258}。“吐司”，《四》本《八》本作“土司”。径改。“吐
-司”，烤面包片。［英~toast］
+\recipelist{162,248,256,257,258}。“吐司”，《四》本作“土司”。径改。“吐司”，烤面
+包片。［英~toast］
 
-\reciperef{163}。“鲜虾仁”，《四》本《八》本“鲜”前衍一“尽”字。径删。
+\reciperef{163}。“鲜虾仁”，《四》本“鲜”前衍一“尽”字。径删。
 
-\reciperef{180}。“带丝”，《四》本《八》本作“代丝”。径改。“带丝”，海带丝。
+\reciperef{180}。“带丝”，《四》本作“代丝”。径改。“带丝”，海带丝。
 
-\reciperef{183}。“擀”，《四》本《八》本作“扞”。径改。
+\reciperef{183}。“擀”，《四》本作“扞”。径改。
 
-\reciperef{187}。“旗子块”，《四》本《八》本作“棋子块”。径改。
+\reciperef{187}。“旗子块”，《四》本作“棋子块”。径改。
 
-\reciperef{194}。“铝盘”，《四》本《八》本作“锑盘”。径改。
+\reciperef{194}。“铝盘”，《四》本作“锑盘”。径改。
 
 \recipelist{202,204}。“红苕”，亦称番薯、红薯、甘薯。
 
-\reciperef{204}。“青糖”，《四》本《八》本作“清糖”，径改。“青糖”，粗制赤（红）
-糖。
+\reciperef{204}。“青糖”，《四》本作“清糖”，径改。“青糖”，粗制赤（红）糖。
 
-\recipelist{204,207}。“橘红”，《四》本《八》本作“桔红”。径改。
+\recipelist{204,207}。“橘红”，《四》本作“桔红”。径改。
 
-\reciperef{205}。“圆子”，《四》本《八》本《中》本作“元子”。径改。“入沸水潦过
-心”。“潦”，用开水略煮。
+\reciperef{205}。“圆子”，《四》本作“元子”。径改。“入沸水潦过心”。“潦”，用开水
+略煮。
 
-\reciperef{207}。“百合”，《四》本《八》本作“白合”。径改。
+\reciperef{207}。“百合”，《四》本作“白合”。径改。
 
-\reciperef{212}。“大拇指”，《四》本《八》本作“大姆指”。据《中》本改。
+\reciperef{212}。“大拇指”，《四》本作“大姆指”。据《中》本改。
 
 \reciperef{217}。“再放入炒好的馅于萝卜腹内，用盖盖好……”\\%
 “用盖盖好”，《四》本《八》本作“用盖好”。径补。
 
-\recipelist{223,261}。“什锦”，《四》本《八》本作“什景”。径改。
+\recipelist{223,261}。“什锦”，《四》本作“什景”。径改。
 
 \recipelist{225,226}。“𥑲水”，盐卤。“𥑲”字疑误。
 
-\reciperef{228}。“四张豆腐皮一叠，如是再重四张，共为两叠。”“叠”，《四》本《八》
-本作“迭”。径改。“如是”，《四》本《八》本作“如果”。径改。
+\reciperef{228}。“四张豆腐皮一叠，如是再重四张，共为两叠。”“叠”，《四》本作
+“迭”。径改。“如是”，《四》本作“如果”。径改。
 
 \reciperef{233}。《四》本“八分火”之后无脚注标记{\footnotesize\circled{1}}。据
 《八》本《中》本补。
 
-\reciperef{234}。“椿芽”，《四》本《八》本作“春芽”。径改。
+\reciperef{234}。“椿芽”，《四》本作“春芽”。径改。
 
 \reciperef{244}。“带皮”，海带。亦称海藻、昆布、海布。
 
-\reciperef{245}。“盐六分”，《四》本《八》本作“盐一分”。据《中》本改。《四》本
-《八》本无脚注{\footnotesize\circled{1}\circled{2}\circled{3}\circled{4}}。据
-《中》本补。
+\reciperef{245}。“盐六分”，《四》本作“盐一分”。据《中》本改。《四》本无脚注%
+{\footnotesize\circled{1}\circled{2}\circled{3}\circled{4}}。据《中》本补。
 
 \reciperef{253}。《中》本标题作“子母会”。“因鸽子与鸽蛋同配一菜，故名子母会
-（烩）。”《四》本《八》本括号部分在句号之后。《中》本无括号部分内容。据《标点
-符号用法》\textsc{gb/t 15834--2011}，将括号部分移至句号之前。
+（烩）。”《四》本括号部分在句号之后。《中》本无括号部分内容。据《标点符号用法》
+\textsc{gb/t 15834--2011}，将括号部分移至句号之前。
 
 \reciperef{264}。“抽去……扦子骨……入抽去扦子骨处”。“扦”，~《四》本作“杄”，《八》
 本作“{\bfseries\scalebox{.65}[1]{林}\kern-.12em\scalebox{.55}[1]{千}}”。径改。
 
-\recipelist{264,276,302}。“仔鸡”，《四》本《八》本作“子鸡”。径改。
+\recipelist{264,276,302}。“仔鸡”，《四》本作“子鸡”。径改。
 
-\reciperef{267}。“扳指”，《四》本《八》本《重》本作“斑指”。径改。“……以防炸糊。”
-“糊”，《四》本《八》本《重》本作“胡”。径改。
+\reciperef{267}。“扳指”，《四》本作“斑指”。径改。“……以防炸糊。”“糊”，《四》本
+作“胡”。径改。
 
-\recipelist{267,308}。“汆一道”，《四》本《八》本作“川一道”。径改。
+\recipelist{267,308}。“汆一道”，《四》本作“川一道”。径改。
 
 \reciperef{268}。“阴米”。将糯米淘净，用水稍浸泡，捞出沥干水分，入笼用旺火蒸熟，
 取出晾干即成。
 
-\reciperef{269}。“竹荪”，《四》本《八》本《重》本皆作“竹参”。径改。
+\reciperef{269}。“竹荪”，《四》本作“竹参”。径改。
 
 \reciperef{273}。各本标题皆作“汗蒸鱼”。径改。
 
-\reciperef{292}。“莴笋”，《四》本《八》本作“窝笋”。径改。\\%
-“瓢儿白”，上海白菜。亦称上海青、苏州青、青江菜、小棠菜、青梗白菜、青江白菜、
-汤匙菜等。
+\reciperef{292}。“莴笋”，《四》本作“窝笋”。径改。“瓢儿白”，上海白菜。亦称上海
+青、苏州青、青江菜、小棠菜、青梗白菜、青江白菜、 汤匙菜等。
 
-\recipelist{303,307}。“仔公鸡”，《四》本《八》本作“子公鸡”。径改。
+\recipelist{303,307}。“仔公鸡”，《四》本作“子公鸡”。径改。
 
 \endgroup%
 
