Fix note for recipe 158

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -225,7 +225,7 @@
 
 \recipelist{157,173,178,182,183,184,185,193,263}。“煨”，《四》本作“喂”。径改。
 
-\reciperef{158}。“用刀切成与虾肉一般大的丁颗”，《四》本无“一般”二字。文意不通。
+\reciperef{158}。“用刀切成与虾肉一样大的丁颗”，《四》本无“一样”二字。文意不通。
 径补。
 
 \recipelist{162,248,256,257,258}。“吐司”，《四》本作“土司”。径改。“吐司”，烤面
