--- a/latex/copyright.tex
+++ b/latex/copyright.tex
@@ -114,7 +114,7 @@ typographical layouts, font styles, font sizes, and illustrations.
 See also \url{https://github.com/neo954/sichuan-cookbook} for information
 about \textit{Sichuan Cookbook 1972 Remake}.
 
-Beta electronic edition, February 2023.
+First electronic edition, April 2023.
 
 \endgroup%
 
