Correct \parindent in Collation Notes

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -31,6 +31,7 @@
 \vbadness=10000%
 \small%
 \setlength{\parskip}{0\baselineskip plus .05\baselineskip}%
+\setlength{\parindent}{1.945945em}%
 \begin{center}%
 {%
 	\Large\rmfamily\bfseries%
