--- a/latex/recipe-226.tex
+++ b/latex/recipe-226.tex
@@ -48,7 +48,7 @@
 
 \preparation
 
-\step 每个豆腐开成四片，入沸水透去𥑲水味后，滤干，用丝箩过细，连同鸡脯茸加蛋
+\step 每个豆腐开成四片，入沸水透去胆水味后，滤干，用丝箩过细，连同鸡脯茸加蛋
 清、豆粉、面粉、盐、味精、料酒、胡椒、化猪油合搅成“糁”。葱切成一寸二长的花葱。
 盐合花椒面成椒盐。
 
