Correct comment of DANSHUI

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -260,7 +260,7 @@
 
 \recipelist{223,261}。“什锦”，《四》本作“什景”。径改。
 
-\recipelist{225,226}。“𥑲水”，盐卤。“𥑲”字疑误。
+\recipelist{225,226}。“胆水”，《四》本作“𥑲水”。径改。“胆水”，盐卤。
 
 \reciperef{228}。“四张豆腐皮一叠，如是再重四张，共为两叠。”“叠”，《四》本作
 “迭”。径改。“如是”，《四》本作“如果”。径改。
