Add a note for recipe 262

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -279,6 +279,9 @@
 （烩）。”《四》本括号部分在句号之后。《中》本无括号部分内容。据《标点符号用法》
 \textsc{gb/t 15834--2011}，将括号部分移至句号之前。
 
+\reciperef{262}。《四》本《八》本原料部分列有“干粉~五钱”，制作方法中并未提及。
+径删。
+
 \reciperef{264}。“抽去……扦子骨……入抽去扦子骨处”。“扦”，~《四》本作“杄”，《八》
 本作“{\bfseries\scalebox{.65}[1]{林}\kern-.12em\scalebox{.55}[1]{千}}”。径改。
 
