Reduce the \textwidth 3bp in Collation Notes

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -40,6 +40,16 @@
 \end{center}%
 
 \vspace{.8125\baselineskip}%
+% Reduce the \textwidth 3bp
+\begin{list}{}{%
+	\setlength{\topsep}{0pt}%
+	\setlength{\leftmargin}{1.5bp}%
+	\setlength{\rightmargin}{1.5bp}%
+	\setlength{\listparindent}{\parindent}%
+	\setlength{\itemindent}{\parindent}%
+	\setlength{\parsep}{\parskip}%
+}%
+\item[]%
 
 本书原为成都市饮食公司所编纂。成都市饮食公司成立于一九五六年，是一家专营川菜、
 成都小吃的特色餐饮企业。原书未公开出版，仅以内部资料发行于一九七二年七月。据编
@@ -304,6 +314,7 @@
 
 \recipelist{303,307}。“仔公鸡”，《四》本作“子公鸡”。径改。
 
+\end{list}
 \endgroup%
 
 % vim: filetype=tex noautoindent nojoinspaces
