--- a/latex/recipe-045.tex
+++ b/latex/recipe-045.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}[宫保腰块]{糊辣腰块}
+\begin{recipe}[宫保腰块]{煳辣腰块}
 
 \ingredients
 
