--- a/latex/recipe-064.tex
+++ b/latex/recipe-064.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}[宫保鸡丁]{糊辣鸡丁}
+\begin{recipe}[宫保鸡丁]{煳辣鸡丁}
 
 \ingredients
 
