Add a collation note for HULA

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -149,6 +149,8 @@
 
 \recipelist{44,49,87,106,117,206,248}。“烂”，《四》本作“滥”。径改。
 
+\recipelist{45,64}。“煳辣”，《四》本作“糊辣”。径改。
+
 \reciperef{48}。“水龙头”，《四》本作“水笼头”。径改。
 
 \recipelist{50,79,85,91,158,214,220,230,256,260,274}。“番茄”，各本皆作“蕃茄”。
