--- a/latex/recipe-006.tex
+++ b/latex/recipe-006.tex
@@ -58,7 +58,7 @@
 兰片、青菌等，翻搅一下，随将碗内调好的佐料倒入，用汤瓢搅匀，即炒成有汤的肉片。
 盛入碗内待用。
 
-\step 锅巴取不厚不糊的，用手掰成长宽约两寸的块。菜油放入锅内在旺火上烧沸，将锅
+\step 锅巴取不厚不煳的，用手掰成长宽约两寸的块。菜油放入锅内在旺火上烧沸，将锅
 巴倒入，炸至呈金黄色时捞入盘中。盘底留沸油约六钱（淋肉片时发出声音才大），然后
 将炒好的有汤肉片同时端出，待锅巴在桌上放定后，始将肉片往锅巴上淋下，这时“哗嚓”
 一声，盘中立即喷起一种浓烈的糖醋香味。
