--- a/latex/recipe-009.tex
+++ b/latex/recipe-009.tex
@@ -60,9 +60,9 @@
 十分钟，使之入味。然后将蛋清豆粉倒入，翻搅合匀，使全部蘸裹在肉片上。
 
 \step 将锅用旺火烧热，使全锅温度均匀，放入猪油，即端离火口，左右上下转动，使油
-均匀涂于锅内（以免贴肉片时焦糊粘锅）。然后将肉片伸展开，在其一面蘸上面包粉（将
+均匀涂于锅内（以免贴肉片时焦煳粘锅）。然后将肉片伸展开，在其一面蘸上面包粉（将
 面包揉搓成为粉）贴于锅上。待全部贴好后持锅于旺火上，左右来回移动烘烤，注意使受
-热面均匀，不要烤糊。约烘一分钟，肉片着锅面呈金黄色，能随锅活动起来时，即将另锅
+热面均匀，不要烤煳。约烘一分钟，肉片着锅面呈金黄色，能随锅活动起来时，即将另锅
 烧至冒大烟的猪油约四两（要先准备好）倒入，并把锅端起摆动一下，让油淌到贴在锅边
 的肉片上约二秒钟（经沸油浪后，未着锅的一面肉，由半熟而烫熟，吃起来更嫩），滗去
 油，摆入盘中。
