--- a/latex/recipe-058.tex
+++ b/latex/recipe-058.tex
@@ -49,7 +49,7 @@
 葱白丁放入，再将砍好的鸡块摆在上面，状如松果纹。
 
 \step 芝麻用清水淘洗，去净空壳、沙石，滤干水；放入锅中置微火上，以手铲不停翻
-炒，炒至发出“啪啪”的声音，呈金黄色（注意不要炒糊）时即铲入碗内。然后取用五钱放
+炒，炒至发出“啪啪”的声音，呈金黄色（注意不要炒煳）时即铲入碗内。然后取用五钱放
 在缽内，砸成粉，加香油调匀，成为芝麻酱。
 
 \step 将芝麻酱、酱油、白糖、醋、辣椒油、花椒面等一并放入碗内调匀后，淋在摆好的
