--- a/latex/recipe-091.tex
+++ b/latex/recipe-091.tex
@@ -62,7 +62,7 @@
 
 \step 炒锅在旺火上烧至七成热，放入猪油一浪，使锅内薄薄沾上一层油即滗去；将做好
 的鸡片逐个分开，猪肉向下贴在锅内，贴好后把锅置于微火上，并左右前后移动，以免煎
-糊；煎约八分钟，肉底呈金黄色时，将肉片化出的油用小铲轻轻向鸡片的周围浇淋，使鸡
+煳；煎约八分钟，肉底呈金黄色时，将肉片化出的油用小铲轻轻向鸡片的周围浇淋，使鸡
 片逐渐变为浅黄色至熟；随后滗出多余的油，再淋上香油，将锅颠簸一下起锅，把鸡片堆
 在条盘的一端。
 
