--- a/latex/recipe-093.tex
+++ b/latex/recipe-093.tex
@@ -56,7 +56,7 @@
 
 \step 炒锅在中火上先放菜油四两，烧至四成热，即将盘内加工好的半制品由锅边轻轻趖
 下，炸至进皮，滗去油，将锅一簸，翻面再炸。为了保持四至五成的油温，用瓢子逐渐加
-添新油，这样使油浸透、炸酥而又避免炸糊。
+添新油，这样使油浸透、炸酥而又避免炸煳。
 
 \step 起锅时用刀改成长一寸五、厚约二分的片，用条盘盛装，摆成三叠水，一端镶入拌
 好的生菜，吃时蘸椒盐、葱酱。
