--- a/latex/recipe-197.tex
+++ b/latex/recipe-197.tex
@@ -50,7 +50,7 @@
 
 \step 另用无油的干净炒锅放入清水在旺火上烧开，把白糖放入，用小铲不停的搅造，待
 水份逐渐蒸发，糖汁冒起大气泡时，即将炸好的肉条倒入，用手铲不断翻炒，同时加入熟
-芝麻细末，再翻炒颠簸两下（若火过旺可将炒锅移离火口，以免糖糊），此时糖汁、芝麻
+芝麻细末，再翻炒颠簸两下（若火过旺可将炒锅移离火口，以免糖煳），此时糖汁、芝麻
 已沾满肉条，即起锅。
 
 \features
