--- a/latex/recipe-230.tex
+++ b/latex/recipe-230.tex
@@ -63,7 +63,7 @@
 
 \step 炒锅放在旺火上烧至七成热，倒入猪油将锅转动，使锅内粘上一层油，即滗去油，
 随将蒸好的豆腐（肥肉片向下）逐个贴在锅内约煎八分钟。煎时将锅左右前后移动，以免
-糊锅。煎至肉底呈现金黄色、豆腐呈浅黄色时，淋入香油，将炒锅转动一下即起锅。把有
+煳锅。煎至肉底呈现金黄色、豆腐呈浅黄色时，淋入香油，将炒锅转动一下即起锅。把有
 火腿末的一面向上摆在盘的一端；将淘洗干净的生菜掐叶去根（长约一寸二分），用糖、
 醋、香油拌合好后放在盘的另一端；然后将番茄酱淋在生菜面上即成。
 
