--- a/latex/recipe-260.tex
+++ b/latex/recipe-260.tex
@@ -58,7 +58,7 @@
 
 \step 猪油放入锅内，于旺火上烧至五成热，将裹好蛋清豆粉的口蘑逐个放入稍炸。若火
 过旺即将锅端离火口，炸至口蘑上的蛋清豆粉刚熟（看不见黄色仍是白的）即捞入盘中。
-要边放边捞，以免炸糊。若有粘连，可用手掰开。再将锅在旺火上烧至八成热，将盘中炸
+要边放边捞，以免炸煳。若有粘连，可用手掰开。再将锅在旺火上烧至八成热，将盘中炸
 过的口蘑全部倒入，约炸五分钟呈金黄色时滗去炸油，随即淋入香油，捞出盛入盘中。另
 以四个小碟盛入番茄酱（番茄酱加香油、白糖、味精、盐各少许）蘸食。
 
