--- a/latex/recipe-267.tex
+++ b/latex/recipe-267.tex
@@ -45,7 +45,7 @@
 肠头清洗干净。洗时加进生姜、青葱、白矾、醋等，以去其怪味。洗净后以沸水微煮（厨
 称“汆一道”），捞起滤干，盛入碗里，加姜、葱、胡椒、食盐及绍酒等，置笼上蒸约两小
 时，俟蒸𤆵即取出，晾干水气，涂上干豆粉，以滚油炸之。炸时火不宜大，油不宜过滚，
-以防炸糊。至表皮现鸭黄色时，即捞起。斜切约一小指宽的小筒节，盛入盘内，配以葱、
+以防炸煳。至表皮现鸭黄色时，即捞起。斜切约一小指宽的小筒节，盛入盘内，配以葱、
 酱或椒盐，以荷叶饼佐食。
 
 \features
