Revise note for HU in recipe 267

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -298,7 +298,7 @@
 
 \recipelist{264,276,302}。“仔鸡”，《四》本作“子鸡”。径改。
 
-\reciperef{267}。“扳指”，《四》本作“斑指”。径改。“……以防炸糊。”“糊”，《四》本
+\reciperef{267}。“扳指”，《四》本作“斑指”。径改。“……以防炸煳。”“煳”，《四》本
 作“胡”。径改。
 
 \recipelist{267,308}。“汆一道”，《四》本作“川一道”。径改。
