Add a collation note for HU

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -82,6 +82,8 @@
 
 \reciperef{6}。“锅巴”，《四》本作“锅粑”。据《中》本改。
 
+\recipelist{6,9,58,91,93,99,197,230,260}。“煳”，《四》本作“糊”。径改。
+
 \reciperef{7}。《四》本无脚注{\footnotesize\circled{1}}。据《中》本补。
 
 \recipelist{8,11,16,17,35,54,73,78,109}等多篇。“醪糟”，各本皆作“𰪿糟”。径改。
