--- a/latex/sichuan-cookbook.tex
+++ b/latex/sichuan-cookbook.tex
@@ -573,7 +573,7 @@
 \hypertarget{collation-notes}{}%
 \bookmark[dest=collation-notes,level=section]{校勘记}%
 \input{collation-notes.tex}
-\clearpage
+\cleardoublepage
 \hypertarget{index}{}%
 \bookmark[dest=index,level=section]{索引}%
 \begingroup%
