--- a/latex/recipe-055.tex
+++ b/latex/recipe-055.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{罈子肉}
+\begin{recipe}{坛子肉}
 
 \ingredients
 
@@ -79,11 +79,11 @@
 
 \step 准备干锯末二十斤。在平整干燥的地坪上，安上铁质三脚架（高五寸）。架内倒上
 锯末五斤，架底处的锯末留一空窝，内放烧红的杠炭三段（每段长约五寸），再把大口料
-酒罈（内外有釉、无裂缝者）一个安于三脚架上。然后将猪骨垫于罈底和罈内四周，再将
+酒坛（内外有釉、无裂缝者）一个安于三脚架上。然后将猪骨垫于坛底和坛内四周，再将
 开水、料酒、姜、葱布包、盐、红白酱油、火腿、猪肘子肉、鸡肉、鸭肉、冬笋、口蘑布
-包、墨鱼、珧柱、大金钩、冰糖汁等依次放入罈中。用纸封固罈口，再把锯末十五斤堆于
-罈外四周，煨四、五小时（在煨的过程中，要有专人负责看火，不能用旺火，也不能断
-火）后，撕去罈口草纸，将鱼翅布包，海参布包，炸好的鸡蛋放入罈中，再煨半小时即
+包、墨鱼、珧柱、大金钩、冰糖汁等依次放入坛中。用纸封固坛口，再把锯末十五斤堆于
+坛外四周，煨四、五小时（在煨的过程中，要有专人负责看火，不能用旺火，也不能断
+火）后，撕去坛口草纸，将鱼翅布包，海参布包，炸好的鸡蛋放入坛中，再煨半小时即
 成。
 
 \step 此菜吃法有两种：一种是将各种肉分开，分别装盘上席；另一种是将各种肉分小，
@@ -92,7 +92,7 @@
 
 \features
 
-此菜在成都著名已久，由于用料复杂，水分较少，加之封固罈口微火煨焅而成，保持了各
+此菜在成都著名已久，由于用料复杂，水分较少，加之封固坛口微火煨焅而成，保持了各
 种材料的原汁和原气。因此，菜呈金红色，鲜艳美观，肉极𤆵\footnotemark 烂，鲜美而
 浓香，可家常自吃，又可用于筵席。
 
