--- a/latex/recipe-296.tex
+++ b/latex/recipe-296.tex
@@ -27,7 +27,7 @@
 % OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 % OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 %
-\begin{recipe}{罈子肉}
+\begin{recipe}{坛子肉}
 
 \ingredients
 
@@ -48,9 +48,9 @@
 
 \preparation
 
-肉刮洗干净，切成二寸见方块子，瘦肉宰烂炸成肉饼，连同鸡块、鸡蛋、冬笋装一小罈
+肉刮洗干净，切成二寸见方块子，瘦肉宰烂炸成肉饼，连同鸡块、鸡蛋、冬笋装一小坛
 内，加进绍酒、花椒、葱、姜、金钩、冰糖色、酱油、食盐、冰糖和适当好汤，用纸打湿
-封严罈口，在糠壳火上煨约五、六小时即好。出罈时去姜、葱，有条理地盛入菜盘中，将
+封严坛口，在糠壳火上煨约五、六小时即好。出坛时去姜、葱，有条理地盛入菜盘中，将
 汤汁倾入锅中，下水豆粉扯芡，淋在肉上。
 
 \features
