Add a collation note for TAN

--- a/latex/collation-notes.tex
+++ b/latex/collation-notes.tex
@@ -165,6 +165,8 @@
 \recipelist{55,186,188,189,223,261,288,293}。“珧柱”，《四》本作“𧎼蛀”。《中》
 本作“𧎼柱”。径改。
 
+\recipelist{55,296}。“坛”，《四》本作“罈”。《中》本作“罎”。径改。
+
 \reciperef{56}。“将烤池内的红杠炭捡于烤池四周”。“捡”，《四》本《八》本《中》本
 皆作“检”。径改。“在池中捡红杠炭一块”。“捡”，《四》本作“检”，《八》本作“拣”。据
 《中》本改。
